--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up node 20.10.0
-      uses: actions/setup-java@v2
+      uses: actions/setup-node@v2
       with:
         node-version:  20.10.0
     - name: Install dependencies
